VT341805-310: Added profile picture to navbar and fixed bug where pic is too big (navbar not working correctly if tab is closed and reopened)

--- a/client/src/css/SideDrawer.css
+++ b/client/src/css/SideDrawer.css
@@ -85,6 +85,8 @@
 .navigation-user-picture-img,
 #navigation-user-picture-img {
   border-radius: 50%;
+  width: 180px;
+  height: 180px;
 }
 
 .navbar-desktop-extended-logo {
